[gd_scene load_steps=9 format=2]

[ext_resource path="res://wintile.tscn" type="PackedScene" id=1]
[ext_resource path="res://greentile.tres" type="TileSet" id=2]
[ext_resource path="res://greenbackground.jpg" type="Texture" id=3]
[ext_resource path="res://level1.gd" type="Script" id=4]
[ext_resource path="res://PlayerNode.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="level1" type="Sprite" parent="."]
position = Vector2( -65.4681, 282.115 )
scale = Vector2( 1.06024, 0.440358 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="greentile" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 327682, 0, 0, 327694, 0, 0, 327707, 0, 0, 393218, 0, 0, 393230, 0, 0, 393243, 0, 0, 458754, 0, 0, 458757, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458766, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458779, 0, 0, 524290, 0, 0, 524293, 0, 0, 524296, 0, 0, 524302, 0, 0, 524312, 0, 0, 524315, 0, 0, 589826, 0, 0, 589829, 0, 0, 589832, 0, 0, 589838, 0, 0, 589848, 0, 0, 589851, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655368, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655381, 0, 0, 655384, 0, 0, 655387, 0, 0, 720898, 0, 0, 720904, 0, 0, 720917, 0, 0, 720920, 0, 0, 720923, 0, 0, 786434, 0, 0, 786440, 0, 0, 786453, 0, 0, 786456, 0, 0, 786459, 0, 0, 851970, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851989, 0, 0, 851995, 0, 0, 917506, 0, 0, 917509, 0, 0, 917519, 0, 0, 917522, 0, 0, 917525, 0, 0, 917531, 0, 0, 983042, 0, 0, 983045, 0, 0, 983055, 0, 0, 983058, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 1048578, 0, 0, 1048581, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048594, 0, 0, 1048603, 0, 0, 1114114, 0, 0, 1114117, 0, 0, 1114123, 0, 0, 1114130, 0, 0, 1114139, 0, 0, 1179650, 0, 0, 1179653, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179675, 0, 0, 1245186, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245195, 0, 0, 1245208, 0, 0, 1245211, 0, 0, 1310722, 0, 0, 1310728, 0, 0, 1310731, 0, 0, 1310744, 0, 0, 1310747, 0, 0, 1376258, 0, 0, 1376264, 0, 0, 1376267, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376283, 0, 0, 1441794, 0, 0, 1441797, 0, 0, 1441800, 0, 0, 1441803, 0, 0, 1441806, 0, 0, 1441816, 0, 0, 1441819, 0, 0, 1507330, 0, 0, 1507333, 0, 0, 1507336, 0, 0, 1507342, 0, 0, 1507352, 0, 0, 1507355, 0, 0, 1572866, 0, 0, 1572869, 0, 0, 1572872, 0, 0, 1572878, 0, 0, 1572885, 0, 0, 1572891, 0, 0, 1638402, 0, 0, 1638405, 0, 0, 1638408, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638420, 0, 0, 1638421, 0, 0, 1638427, 0, 0, 1703938, 0, 0, 1703941, 0, 0, 1703944, 0, 0, 1703953, 0, 0, 1703956, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1703963, 0, 0, 1769474, 0, 0, 1769477, 0, 0, 1769480, 0, 0, 1769489, 0, 0, 1769492, 0, 0, 1769499, 0, 0, 1835010, 0, 0, 1835013, 0, 0, 1835014, 0, 0, 1835015, 0, 0, 1835016, 0, 0, 1835017, 0, 0, 1835018, 0, 0, 1835019, 0, 0, 1835020, 0, 0, 1835021, 0, 0, 1835022, 0, 0, 1835028, 0, 0, 1835035, 0, 0, 1900546, 0, 0, 1900549, 0, 0, 1900552, 0, 0, 1900558, 0, 0, 1900564, 0, 0, 1900567, 0, 0, 1900568, 0, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1966082, 0, 0, 1966085, 0, 0, 1966088, 0, 0, 1966094, 0, 0, 1966097, 0, 0, 1966100, 0, 0, 1966103, 0, 0, 1966107, 0, 0, 2031618, 0, 0, 2031621, 0, 0, 2031627, 0, 0, 2031633, 0, 0, 2031636, 0, 0, 2031643, 0, 0, 2097154, 0, 0, 2097157, 0, 0, 2097163, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097179, 0, 0, 2162690, 0, 0, 2162693, 0, 0, 2162694, 0, 0, 2162695, 0, 0, 2162696, 0, 0, 2162697, 0, 0, 2162698, 0, 0, 2162699, 0, 0, 2162702, 0, 0, 2162705, 0, 0, 2162708, 0, 0, 2162709, 0, 0, 2162712, 0, 0, 2162715, 0, 0, 2228226, 0, 0, 2228232, 0, 0, 2228235, 0, 0, 2228238, 0, 0, 2228239, 0, 0, 2228240, 0, 0, 2228241, 0, 0, 2228245, 0, 0, 2228248, 0, 0, 2228251, 0, 0, 2293762, 0, 0, 2293768, 0, 0, 2293771, 0, 0, 2293781, 0, 0, 2293784, 0, 0, 2293787, 0, 0, 2359298, 0, 0, 2359304, 0, 0, 2359307, 0, 0, 2359317, 0, 0, 2359320, 0, 0, 2359323, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424840, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424850, 0, 0, 2424853, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2490370, 0, 0, 2490386, 0, 0, 2490389, 0, 0, 2490395, 0, 0, 2555906, 0, 0, 2555922, 0, 0, 2555925, 0, 0, 2555931, 0, 0, 2621442, 0, 0, 2621443, 0, 0, 2621444, 0, 0, 2621445, 0, 0, 2621446, 0, 0, 2621447, 0, 0, 2621448, 0, 0, 2621449, 0, 0, 2621450, 0, 0, 2621451, 0, 0, 2621452, 0, 0, 2621453, 0, 0, 2621454, 0, 0, 2621455, 0, 0, 2621456, 0, 0, 2621457, 0, 0, 2621458, 0, 0, 2621459, 0, 0, 2621460, 0, 0, 2621461, 0, 0, 2621462, 0, 0, 2621463, 0, 0, 2621464, 0, 0, 2621465, 0, 0, 2621466, 0, 0, 2621467, 0, 0 )

[node name="wintile" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -589833, 0, 0, 2424839, 0, 0 )

[node name="PlayerNode" parent="." instance=ExtResource( 5 )]

[node name="Enemy" parent="." instance=ExtResource( 6 )]
position = Vector2( 304, 400 )

[node name="StartTimer" type="Timer" parent="."]

[node name="TimeLabel" type="Label" parent="."]
margin_left = 140.218
margin_top = 8.21231
margin_right = 332.218
margin_bottom = 63.2123
custom_fonts/font = SubResource( 1 )
text = "Start
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ready" from="." to="." method="_on_Main_ready"]
[connection signal="win" from="wintile" to="." method="_on_wintile_win"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
